updated font-sizes, fixed text spacing for phone view

--- a/src/sass/Contact.scss
+++ b/src/sass/Contact.scss
@@ -20,7 +20,7 @@
 }
 
 .contactParagraph {
-  font-size: 1.9rem;
+  font-size: 1.5rem;
   width: 100%;
   color: rgb(98, 105, 108);
 
