--- a/src/sass/Experience.scss
+++ b/src/sass/Experience.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   margin: 0% auto;
-  margin-top: 5%;
+  margin-top: 10%;
   width: 70%;
 }
 
@@ -19,7 +19,7 @@
 }
 
 .experienceParagraph {
-  font-size: 1.9rem;
+  font-size: 1.5rem;
   width: 75%;
   line-height: 1.65;
   color: rgb(98, 105, 108);
@@ -30,6 +30,7 @@
 
   @media (max-width: 1075px) {
     width: 100%;
+    font-size: 1.65rem;
   }
 
   @media (max-width: 875px) {
@@ -38,10 +39,10 @@
   }
 
   @media (max-width: 630px) {
-    font-size: 1.3rem;
+    font-size: 1.4rem;
   }
 
   @media (max-width: 553px) {
-    font-size: 1.2rem;
+    font-size: 1.3rem;
   }
 }
