--- a/src/sass/Header.scss
+++ b/src/sass/Header.scss
@@ -2,7 +2,7 @@
   font-size: 2rem;
   margin: 0% 15.5%;
   margin-top: 8%;
-  line-height: 0.3;
+  // line-height: 0.3;
 
   @media (max-width: 725px) {
     font-size: 1.5rem;
