--- a/src/sass/MiracleMessages.scss
+++ b/src/sass/MiracleMessages.scss
@@ -2,7 +2,7 @@
   display: flex;
   width: 70%;
   margin: 0% auto;
-  margin-top: 8%;
+  margin-top: 2%;
 }
 
 .projectHeader {
